--- a/excercice06.html
+++ b/excercice06.html
@@ -23,6 +23,7 @@
 			   <option>angleterre</option>
                <option>suisse</option>
                <option>cameroun</option>
+			   <option>tunisie</option>
 			</select>
 			<br/>
 		   commentaire :
